# ProhibitedAreaTracking

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
frames_processing/: __init__.py  polygon_annotator.py  reader.py  window_drawer.py
help_tools/: data_containers.py  logger_worker.py
reader/: __init__.py  reader.py
tracking/: __init__.py  cfg_inference.yaml  det_cfg.yaml  intersection.py  track_cfg.yaml  tracker.py
